@@ -22,6 +22,10 @@ nodist_libslang_la_SOURCES = slang_assemble_assignment.c \
 		      slang_assemble_constructor.c \
 		      slang_assemble_typeinfo.c \
 		      slang_compile.c \
+		      slang_compile_function.c \
+		      slang_compile_operation.c \
+		      slang_compile_struct.c \
+		      slang_compile_variable.c \
 		      slang_execute.c \
 		      slang_preprocess.c \
 		      slang_storage.c \
